[GREEN] repass repo tests for TransactionCoupon